Began page creation
• Created header
• Added default colors
• Added default font sizing
• Added animated signature
• Set font to Inter

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maxence Veilleux - Portfolio</title>
+    <!-- FAVICON -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Maxence Veilleux</h1>
+    <header>
+        <img src="media/signature.gif" alt="Maxence Veilleux" id="signature">
+        <!-- Vidéo en arrière-plan -->
+    </header>
+    <main>
+        <section>
+            <h1>Maxence<span>Veilleux</span></h1>
+            <h2>Table des matières</h2>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <p>© Copyright Maxence Veilleux</p>
+            <p>20 février 2025</p>
+        </div>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
