Completed website skeleton
• Added navbar
• Changed cursor appearance (yellow circle)
• Completed AnswerIt presentation
• Sped up welcome signature
• Fixed footer margin issues for small devices
• Other minor changes

--- a/index.html
+++ b/index.html
@@ -5,28 +5,181 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maxence Veilleux - Portfolio</title>
     <!-- FAVICON -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/homepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="media/signature.gif" alt="Maxence Veilleux" id="signature">
+        <nav>
+            <h1><a href="#">Maxence<span></span>Veilleux</a></h1>
+            <ul>
+                <li><a href="#sec-sites">Sites Web</a></li>
+                <li><a href="#sec-graphisme">Graphisme</a></li>
+                <li><a href="#sec-youtube">Chaîne YouTube</a></li>
+                <li><a href="#sec-game-jam">Game Jam</a></li>
+                <li><a href="#sec-formation">Formation</a></li>
+            </ul>
+        </nav>
+        <div id="signatureC">
+            <img src="media/signature.gif" alt="Maxence Veilleux" id="signature">
+        </div>
         <!-- Vidéo en arrière-plan -->
     </header>
     <main>
         <section>
-            <h1>Maxence<span>Veilleux</span></h1>
-            <h2>Table des matières</h2>
+            <a class="anchor" id="sec-sites"></a>
+            <h2>| Sites Web personnels</h2>
+            <article>
+                <h3>AnswerIt</h3>
+                <h4>Année</h4>
+                <p>2023</p>
+                <h4>En bref</h4>
+                <p>AnswerIt est un médium social simple créé dans le contexte du cours en ligne CS50x. Il permet aux utilisateurs de publier du contenu et d'interagir avec les publications des autres utilisateurs.</p>
+                <h4>Compétences</h4>
+                <ul>
+                    <li>HTML, CSS, JS</li>
+                    <li>Python + Flask</li>
+                    <li>SQLite</li>
+                </ul>
+                <br>
+                <br>
+                <div class="expandContainer">
+                    <div>
+                        <video loop autoplay>
+                            <source src="media/answerit.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la vidéo.
+                        </video>
+                        <br>
+                        <iframe class="ytVideo" src="https://www.youtube.com/embed/jVTknpZXtY0" title="CS50x 2023 Final Project: AnswerIt Website" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section>
+            <a class="anchor" id="sec-graphisme"></a>
+            <h2>| Projets de graphisme</h2>
+            <article>
+                <h3>Projet</h3>
+                <h4>Année</h4>
+                <p>202X</p>
+                <h4>En bref</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h4>Compétences</h4>
+                <ul>
+                    <li>Lorem</li>
+                    <li>Ipsum</li>
+                </ul>
+                <br>
+                <br>
+                <div class="expandContainer">
+                    <div>
+                        <video loop autoplay>
+                            <source src="media/answerit.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la vidéo.
+                        </video>
+                        <br>
+                        <iframe class="ytVideo" src="https://www.youtube.com/embed/jVTknpZXtY0" title="CS50x 2023 Final Project: AnswerIt Website" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section>
+            <a class="anchor" id="sec-youtube"></a>
+            <h2>| Ex-créateur de contenu sur YouTube</h2>
+            <article>
+                <h3>Projet</h3>
+                <h4>Année</h4>
+                <p>202X</p>
+                <h4>En bref</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h4>Compétences</h4>
+                <ul>
+                    <li>Lorem</li>
+                    <li>Ipsum</li>
+                </ul>
+                <br>
+                <br>
+                <div class="expandContainer">
+                    <div>
+                        <video loop autoplay>
+                            <source src="media/answerit.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la vidéo.
+                        </video>
+                        <br>
+                        <iframe class="ytVideo" src="https://www.youtube.com/embed/jVTknpZXtY0" title="CS50x 2023 Final Project: AnswerIt Website" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section>
+            <a class="anchor" id="sec-game-jam"></a>
+            <h2>| Game Jams</h2>
+            <article>
+                <h3>Projet</h3>
+                <h4>Année</h4>
+                <p>202X</p>
+                <h4>En bref</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h4>Compétences</h4>
+                <ul>
+                    <li>Lorem</li>
+                    <li>Ipsum</li>
+                </ul>
+                <br>
+                <br>
+                <div class="expandContainer">
+                    <div>
+                        <video loop autoplay>
+                            <source src="media/answerit.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la vidéo.
+                        </video>
+                        <br>
+                        <iframe class="ytVideo" src="https://www.youtube.com/embed/jVTknpZXtY0" title="CS50x 2023 Final Project: AnswerIt Website" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section>
+            <a class="anchor" id="sec-formation"></a>
+            <h2>| Formation</h2>
+            <article>
+                <h3>Projet</h3>
+                <h4>Année</h4>
+                <p>202X</p>
+                <h4>En bref</h4>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h4>Compétences</h4>
+                <ul>
+                    <li>Lorem</li>
+                    <li>Ipsum</li>
+                </ul>
+                <br>
+                <br>
+                <div class="expandContainer">
+                    <div>
+                        <video loop autoplay>
+                            <source src="media/answerit.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la vidéo.
+                        </video>
+                        <br>
+                        <iframe class="ytVideo" src="https://www.youtube.com/embed/jVTknpZXtY0" title="CS50x 2023 Final Project: AnswerIt Website" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
         <div>
             <p>© Copyright Maxence Veilleux</p>
-            <p>20 février 2025</p>
+            <p>22 février 2025</p>
         </div>
     </footer>
+
+    <section>
+
+    </section>
 
     <script src="js/main.js"></script>
 </body>
