--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <h1><a href="#">Maxence<span></span>Veilleux</a></h1>
             <ul>
-                <li><a href="#sites">Sites Web</a></li>
+                <li><a href="#sites">Site Web</a></li>
                 <li><a href="#graphisme">Graphisme</a></li>
                 <li><a href="#youtube">Chaîne YouTube</a></li>
                 <li><a href="#game-jam">Game Jam</a></li>
