Progrès incomplet iframes Facebook
Dans cette version :
- La hauteur des iframe n'est pas adaptive

--- a/index.html
+++ b/index.html
@@ -177,28 +177,37 @@
             <article>
                 <div class="text">
                     <h3><mark>Bourse de la persévérance</mark></h3>
-                    <h4>Année</h4>
-                    <p>2024</p>
+                    <h4>Obtention</h4>
+                    <p>2024 - École internationale du Phare</p>
                     <br>
-                    <br>
+                </div>
+                <iframe class="facebook-post" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D1020204803442153%26set%3Da.1020206546775312%26type%3D3&show_text=true&width=auto" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </article>
+            <article>
+                <div class="text">
                     <h3><mark>Bourse des anciens</mark></h3>
-                    <h4>Année</h4>
-                    <p>2024</p>
+                    <h4>Obtention</h4>
+                    <p>2024 - École internationale du Phare</p>
                     <br>
-                    <br>
+                </div>
+                <iframe class="facebook-post" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fduphare%2Fposts%2Fpfbid0KL2PxD6ZqRU2KawJwLtjE936YvYvrFLZAqkoAZ5Lvjum9pr25gQvQrRLUtrzwTCTl&show_text=true&width=auto" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </article>
+            <article>
+                <div class="text">
                     <h3><mark>Trophée d'excellence au Gala des Bravos</mark></h3>
-                    <h4>Année</h4>
-                    <p>2020</p>
+                    <h4>Obtention</h4>
+                    <p>2020 - École Sainte-Anne</p>
                     <br>
-                    <br>
-                    <h3><mark>Bourse du Conseil des commissaires : 2ème fois</mark></h3>
-                    <h4>Année</h4>
-                    <p>2019</p>
-                    <br>
-                    <br>
-                    <h3><mark>Bourse du Conseil des commissaires : 1ère fois</mark></h3>
-                    <h4>Année</h4>
-                    <p>2017</p>
+                </div>
+                <iframe id="test" class="facebook-post" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCSSsherbrooke%2Fphotos%2Fa.3127925457236446%2F3127926830569642%2F%3Ftype%3D3&show_text=true&width=auto" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </article>
+            <article>
+                <div class="text">
+                    <h3><mark>Autres bourses</mark></h3>
+                    <h4 class="largeText">Bourse du Conseil des commissaires : 2ème fois</h4>
+                    <p>2019 - École Sainte-Anne</p>
+                    <h4 class="largeText">Bourse du Conseil des commissaires : 1ère fois</h4>
+                    <p>2017 - École Eymard</p>
                 </div>
             </article>
         </section>
@@ -228,11 +237,6 @@
         </div>
         <p id="credits">Uicons par <a href="https://www.flaticon.com/uicons">Flaticon</a></p>
     </footer>
-
-    <section>
-
-    </section>
-
     <script src="js/main.js"></script>
 </body>
 
